# Liste-de-courses-API

./: .env  .gitignore  Cargo.toml  docker-compose.yml
migrations/2024-02-15-180218_recipes_and_categories/: down.sql  up.sql
src/: connection.rs  lib.rs  main.rs  schema.rs
src/controller/: recipes.rs
src/model/: categories.rs  ingredients.rs  mod.rs  recipes.rs  steps.rs
