[package]
name = "ldc-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.4" }
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = { version  = "0.15" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }