[package]
name = "ldc-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.4" }
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = { version  = "0.15" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
bb8 = { version = "0.8" }
diesel-async = { version = "0.3", features = ["postgres", "bb8"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }